--- a/.gitignore
+++ b/.gitignore
@@ -1,92 +1,47 @@
-# Created by .ignore support plugin (hsz.mobi)
+# Eclipse specific
+.cache-main
+.cache-tests
+.classpath
+.project
+.scala_dependencies
+.settings
+.worksheet
+bin/
 
-### IntelliJ project files
-.idea
+# IntelliJ
+.idea/
+*.iws
+/classes/
+/out/
 
-### Linux template
-*~
+# Log files
+*.log
 
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
-
-# KDE directory preferences
-.directory
-
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
-
-# .nfs files are created when an open file is removed but is still being accessed
-.nfs*
-
-### macOS template
-# General
+# Mac
 .DS_Store
-.AppleDouble
-.LSOverride
 
-# Icon must end with two \r
-Icon
+# Miscellaneous
+/.metadata/
+/.recommenders/
+/RemoteSystemsTempFiles/
+javascript/node_modules/
 
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-### SBT template
-# Simple Build Tool
-# http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
-
-dist/*
-target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
+# sbt specific
 .cache
 .lib/
+dist/*
+lib_managed/
+project/**/project
+project/activator-sbt*
+target/
 
-gen
-
-### Scala template
-*.log
+# Scala worksheets (Eclipse or IntelliJ)
 *.sc
 
-### Windows template
-# Windows thumbnail cache files
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
+# ScalaTest
+exportToHTML
 
-# Dump file
-*.stackdump
-
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
+# Windows
+desktop.ini
+thumbs.db
 *.lnk
