feat: Made it simpler.

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,5 +1,6 @@
 description = This template generates a Full Stack Scala project.
 name = Scala Full Stack
 organization = nl.amsscala
-verbatim=*.css *.conf *.html *.js *.scala favicon.ico
+package=$organization$.$name;format="lower,word"$
+verbatim=*.css *.conf *.html *.js *.png *.scala favicon.ico
 version = 0.2.0-SNAPSHOT
