--- a/pom.xml
+++ b/pom.xml
@@ -1,102 +1,47 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>shared</groupId>
-    <artifactId>shared_sjs0.6_2.12</artifactId>
-    <packaging>jar</packaging>
-    <description>shared</description>
-    <version>0.1.0-SNAPSHOT</version>
     <name>shared</name>
     <organization>
         <name>shared</name>
     </organization>
     <dependencies>
-            <dependency>
+        <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>2.12.8</version>
         </dependency>
         <dependency>
             <groupId>com.lihaoyi</groupId>
-            <artifactId>autowire_2.12</artifactId>
-            <version>0.2.6</version>
-        </dependency>
-        <dependency>
-            <groupId>com.lihaoyi</groupId>
-            <artifactId>scalatags_2.12</artifactId>
+            <artifactId>scalatags</artifactId>
             <version>0.7.0</version>
         </dependency>
         <dependency>
             <groupId>io.github.cquiroz</groupId>
-            <artifactId>scala-java-time-tzdb_2.12</artifactId>
+            <artifactId>scala-java-time-tzdb</artifactId>
             <version>2.0.0-RC3_2019a</version>
         </dependency>
         <dependency>
             <groupId>io.suzaku</groupId>
-            <artifactId>boopickle_2.12</artifactId>
+            <artifactId>boopickle</artifactId>
             <version>1.3.1</version>
         </dependency>
         <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>2.12.8</version>
-        </dependency>
-        <dependency>
             <groupId>org.scala-js</groupId>
-            <artifactId>scalajs-library_2.12</artifactId>
-            <version>0.6.28</version>
-        </dependency>
-        <dependency>
-            <groupId>org.scala-js</groupId>
-            <artifactId>scalajs-test-interface_2.12</artifactId>
-            <version>0.6.28</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.lihaoyi</groupId>
-            <artifactId>autowire_sjs0.6_2.12</artifactId>
-            <version>0.2.6</version>
-        </dependency>
-        <dependency>
-            <groupId>com.lihaoyi</groupId>
-            <artifactId>scalatags_sjs0.6_2.12</artifactId>
-            <version>0.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.cquiroz</groupId>
-            <artifactId>scala-java-time-tzdb_sjs0.6_2.12</artifactId>
-            <version>2.0.0-RC3_2019a</version>
-        </dependency>
-        <dependency>
-            <groupId>io.suzaku</groupId>
-            <artifactId>boopickle_sjs0.6_2.12</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-                <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>2.12.8</version>
-        </dependency>
-        <dependency>
-            <groupId>shared</groupId>
-            <artifactId>shared_sjs0.6_2.12</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.scala-js</groupId>
-            <artifactId>scalajs-library_2.12</artifactId>
-            <version>0.6.28</version>
-        </dependency>
-        <dependency>
-            <groupId>org.scala-js</groupId>
-            <artifactId>scalajs-test-interface_2.12</artifactId>
-            <version>0.6.28</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.scala-js</groupId>
-            <artifactId>scalajs-dom_sjs0.6_2.12</artifactId>
+            <artifactId>scalajs-dom</artifactId>
             <version>0.9.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-js</groupId>
+            <artifactId>scalajs-test-interface</artifactId>
+            <version>0.6.28</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-js</groupId>
+            <artifactId>scalajs-library</artifactId>
+            <version>0.6.28</version>
         </dependency>
     </dependencies>
 </project>
