--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,11 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
-    <name>shared</name>
+    <groupId>nl.amsscala</groupId>
+    <artifactId>Akka.http-Sjs-Fullstack.g8</artifactId>
+    <name>Akka.http-Sjs-Fullstack.g8</name>
     <organization>
-        <name>shared</name>
+        <name>amsterdam-scala</name>
     </organization>
     <dependencies>
         <dependency>
